@@ -4880,151 +4880,6 @@ bstream_destroy(bstream *s)
 
 /* ------------------------------------------------------------------ */
 
-/*
- * Buffered write stream batches subsequent write requests in order to
- * optimize write bandwidth
- */
-typedef struct {
-	stream *s;
-	size_t len, pos;
-	char buf[FLEXIBLE_ARRAY_MEMBER];	/* NOTE: buf extends beyond array for wbs->len bytes */
-} wbs_stream;
-
-static int
-wbs_flush(stream *s)
-{
-	wbs_stream *wbs;
-	size_t len;
-
-	wbs = (wbs_stream *) s->stream_data.p;
-	if (wbs == NULL)
-		return -1;
-	len = wbs->pos;
-	wbs->pos = 0;
-	if (wbs->s == NULL ||
-	    wbs->s->write(wbs->s, wbs->buf, 1, len) != (ssize_t) len)
-		return -1;
-	if (wbs->s->flush)
-		return wbs->s->flush(wbs->s);
-	return 0;
-}
-
-static ssize_t
-wbs_write(stream *s, const void *buf, size_t elmsize, size_t cnt)
-{
-	wbs_stream *wbs;
-	size_t nbytes, reqsize = cnt * elmsize, todo = reqsize;
-
-	wbs = (wbs_stream *) s->stream_data.p;
-	if (wbs == NULL)
-		return -1;
-	while (todo > 0) {
-		int flush = 1;
-		nbytes = wbs->len - wbs->pos;
-		if (nbytes > todo) {
-			nbytes = todo;
-			flush = 0;
-		}
-		memcpy(wbs->buf + wbs->pos, buf, nbytes);
-		todo -= nbytes;
-		buf = (((const char *) buf) + nbytes);
-		wbs->pos += nbytes;
-		if (flush && wbs_flush(s) < 0)
-			return -1;
-	}
-	return (ssize_t) cnt;
-}
-
-static void
-wbs_close(stream *s)
-{
-	wbs_stream *wbs = (wbs_stream *) s->stream_data.p;
-
-	wbs_flush(s);
-	if (wbs && wbs->s)
-		wbs->s->close(wbs->s);
-}
-
-static void
-wbs_destroy(stream *s)
-{
-	wbs_stream *wbs = (wbs_stream *) s->stream_data.p;
-
-	if (wbs) {
-		if (wbs->s)
-			wbs->s->destroy(wbs->s);
-		free(wbs);
-	}
-	destroy(s);
-}
-
-static void
-wbs_update_timeout(stream *s)
-{
-	wbs_stream *wbs = (wbs_stream *) s->stream_data.p;
-
-	if (wbs && wbs->s) {
-		wbs->s->timeout = s->timeout;
-		wbs->s->timeout_func = s->timeout_func;
-		if (wbs->s->update_timeout)
-			wbs->s->update_timeout(wbs->s);
-	}
-}
-
-static int
-wbs_isalive(stream *s)
-{
-	wbs_stream *wbs = (wbs_stream *) s->stream_data.p;
-
-	if (wbs && wbs->s) {
-		if (wbs->s->isalive)
-			return wbs->s->isalive(wbs->s);
-		return 1;
-	}
-	return 0;
-}
-
-static void
-wbs_clrerr(stream *s)
-{
-	if (s && s->stream_data.p)
-		mnstr_clearerr(((wbs_stream *) s->stream_data.p)->s);
-}
-
-stream *
-wbstream(stream *s, size_t buflen)
-{
-	stream *ns;
-	wbs_stream *wbs;
-
-	if (s == NULL)
-		return NULL;
-	ns = create_stream(s->name);
-	if (ns == NULL)
-		return NULL;
-	wbs = (wbs_stream *) malloc(offsetof(wbs_stream, buf) + buflen);
-	if (wbs == NULL) {
-		destroy(ns);
-		return NULL;
-	}
-	ns->type = s->type;
-	ns->access = s->access;
-	ns->close = wbs_close;
-	ns->clrerr = wbs_clrerr;
-	ns->destroy = wbs_destroy;
-	ns->flush = wbs_flush;
-	ns->update_timeout = wbs_update_timeout;
-	ns->isalive = wbs_isalive;
-	ns->write = wbs_write;
-	ns->stream_data.p = (void *) wbs;
-	wbs->s = s;
-	wbs->pos = 0;
-	wbs->len = buflen;
-	return ns;
-}
-
-/* ------------------------------------------------------------------ */
-
 struct cbstream {
 	void *private;
 	void (*destroy)(void *);
